# rustfmt

./: Cargo.toml
src/: expr.rs  items.rs  lib.rs
src/formatting/: cargo_toml.rs
tests/source/configs/format_cargo_toml/true/array_values/: Cargo.toml
tests/source/configs/format_cargo_toml/true/dotted-key/: Cargo.toml
